<resources>
    <string name="AMBSoundCtrlModeSelect_Elem_AMB">[TBD]</string>
    <string name="AMBSoundCtrlModeSelect_Elem_NC">[TBD]</string>
    <string name="AMBSoundCtrlModeSelect_Elem_Off">[TBD]</string>
    <string name="AMBSoundCtrlModeSelect_Parameter_AMB_Off">[TBD]</string>
    <string name="AMBSoundCtrlModeSelect_Parameter_All">[TBD]</string>
    <string name="AMBSoundCtrlModeSelect_Parameter_NC_AMB">[TBD]</string>
    <string name="AMBSoundCtrlModeSelect_Parameter_NC_Off">[TBD]</string>
    <string name="AMBSoundCtrlModeSelect_Title_Assignable">[TBD]</string>
    <string name="AMBSoundCtrlModeSelect_Title_NC_AMB">[TBD]</string>
    <string name="AMBSoundCtrlModeSelect_Title_NC_AMBIENT">[TBD]</string>
    <string name="AR_Custom_LongStay_WaitTime_Long_Caption">Long</string>
    <string name="AR_Custom_LongStay_WaitTime_Short_Caption">Short</string>
    <string name="AR_Custom_Reset">Reset</string>
    <string name="AR_Custom_Title">Edit</string>
    <string name="AR_Custom_Title_iOS">EDIT</string>
    <string name="AR_InitialSetup_Introduction_Detail">"The app detects your actions and locations you frequent, and automatically switches headphone settings such as how to take in the ambient sound.
Through this, achieves optimal music experiences to suit the scene you are listening to music in.

Use this function?"</string>
    <string name="AR_InitialSetup_Introduction_Detail_China">"The app detects your actions and automatically adjusts how to take in the ambient sound.
Through this, achieves optimal music experiences to suit the scene you are listening to music in.

Use this function?"</string>
    <string name="AR_InitialSetup_SetupComplete_Detail_01">Setting of Adaptive Sound Control complete.</string>
    <string name="AR_InitialSetup_SetupComplete_Detail_02">"Noise Canceling may turn off due to automatic switching to settings that suit detected actions and location.
This setting can be customized using [Adaptive Sound Control] of the dashboard."</string>
    <string name="AR_InitialSetup_SetupComplete_Detail_02_China">"The system is set to turn off the Noise Canceling and take in the ambient sound depending on the detected behavior.
This setting can be customized using the [Adaptive Sound Control] of the dashboard."</string>
    <string name="AR_Notification_Message">[%s] is enabled.</string>
    <string name="AR_Status_Detecting">Detecting</string>
    <string name="AR_Status_LongStay">Staying</string>
    <string name="AR_Status_Run">Running</string>
    <string name="AR_Status_ShortStay">Staying</string>
    <string name="AR_Status_Vehicle">Transport</string>
    <string name="AR_Status_Walking">Walking</string>
    <string name="AR_Title">Adaptive Sound Control</string>
    <string name="AR_Title_Detail">The app detects your actions and locations you frequent, and automatically switches headphone settings such as how to take in the ambient sound.</string>
    <string name="AR_Title_Detail_China">The app detects your actions and [%s] is switched.</string>
    <string name="AR_Title_Detail_EffectTone">The notification sound emitted when switching can be muted by turning [%s] off.</string>
    <string name="ASC_Activity_Change_Not_Apply_Because_Location_Is_Priority">These settings are enabled while you are in this location and automatic switching based on actions is disabled.</string>
    <string name="ASC_Activity_Status_Not_Apply_Because_Location">Disabled while you are in a registered location</string>
    <string name="ASC_Behavior_Detection">Automatic switching based on actions</string>
    <string name="ASC_Behavior_Detection_Menu">Detection of Actions</string>
    <string name="ASC_InitialSetup_LearningLocation_Introduction_Detail">"By registering the locations you frequent, automatic switching of settings based on that location becomes available.
Locations you frequent can easily be registered using the learning function.
Use this function?
*It will take several days after use of the learning function for the Locations you frequent to be registered."</string>
    <string name="ASC_InitialSetup_LearningLocation_Introduction_Detail_Not_SeverUpload">Location is not sent to the server since location learning functions offline.</string>
    <string name="ASC_InitialSetup_TurnOn_LearningLocation">Use the learning function</string>
    <string name="ASC_LearningLocation">Learning of locations you frequent</string>
    <string name="ASC_Location_BackgroundPermission_Tips_Detail_message">"Learning function for locations you frequent and automatic switching of settings based on locations of Adaptive Sound Control are enabled, but locations cannot be detected since Location cannot be accessed.

To operate these functions in the background, press the [Settings] button, and select [Allow all the time] from [Permissions] > [Location]. If allowed at all times, location data will be collected even when the app is closed or not in use."</string>
    <string name="ASC_Location_Detail">Location Information</string>
    <string name="ASC_Location_Detail_Message">"Learned a new location.
If this location is registered, headphone settings can automatically be switched."</string>
    <string name="ASC_Location_Detail_Message_Home_Office">Sets noise canceling to OFF and presets to a setting that enables you to better notice the voices of people around you.</string>
    <string name="ASC_Location_Detail_Message_Other">A recommended setting for this location is available as a preset.</string>
    <string name="ASC_Location_Detail_Message_Station">Sets noise canceling to OFF and presets to a setting that enables you to better notice ambient sounds around you.</string>
    <string name="ASC_Location_Detect_Notification_setting_item_name">Learning of locations you frequent</string>
    <string name="ASC_Location_Detect_Tips_notification_Title">Learned a new location.</string>
    <string name="ASC_Location_Detect_Tips_notification_message">If this location is registered, headphone settings can automatically be switched.</string>
    <string name="ASC_Location_Detection">Automatic switching based on location</string>
    <string name="ASC_Location_Detection_Disclaimer_Msg">In locations such as the subway and tunnels, where GPS reception is weak, learning of locations you frequent and automatic switching based on location may not function properly.</string>
    <string name="ASC_Location_Detection_Disclaimer_NoGPS_Msg">Since your mobile device is not equipped with GPS, learning of locations you frequent and automatic switching based on location may not function properly.</string>
    <string name="ASC_Location_Detection_Disclaimer_Title">There are limits to location detection</string>
    <string name="ASC_Location_Detection_Error_Status_Msg">Detecting Location…</string>
    <string name="ASC_Location_Empty_Message">To use automatic switching based on your location, register locations you frequent.</string>
    <string name="ASC_Location_GPS_ON_Tips_Detail_Btn">Turn on Location</string>
    <string name="ASC_Location_GPS_ON_Tips_Detail_message">"Learning function for locations you frequent and automatic switching of settings based on locations of Adaptive Sound Control are enabled, but locations cannot be detected since Location is turned off.

Turn on Location to correctly make these functions operate."</string>
    <string name="ASC_Location_GPS_ON_Tips_Detail_message_iOS">"Learning function for locations you frequent and automatic switching of settings based on locations of Adaptive Sound Control are enabled, but locations cannot be detected since Location Services is turned off.

Turn on Location Services to correctly make these functions operate.
Perform settings from \"Settings\" > [Privacy] > [Location Services] of the mobile device."</string>
    <string name="ASC_Location_GPS_ON_Tips_Detal_Title">Turn on Location</string>
    <string name="ASC_Location_GPS_ON_Tips_Detal_Title_iOS">Turn on Location Services</string>
    <string name="ASC_Location_GPS_ON_Tips_notification">Turn on Location to detect locations you frequent.</string>
    <string name="ASC_Location_GPS_ON_Tips_notification_iOS">Turn on Location Services to detect locations you frequent.</string>
    <string name="ASC_Location_Learning_Location_List">Learned Location</string>
    <string name="ASC_Location_Learning_Location_Name_Default">Locations you frequent</string>
    <string name="ASC_Location_Learning_Location_Select_message">Select a location you want to register.</string>
    <string name="ASC_Location_Learning_Tips_Detail_Setting_OK_Message">Enabled the learning function.</string>
    <string name="ASC_Location_Learning_Tips_Detail_Title">[TBD]</string>
    <string name="Common_List_Symbol_Only">-</string>
    <string name="Common_More">More info</string>
    <string name="ESA_Audio_Description">[TBD]</string>
    <string name="ESA_Comparison_Button">[TBD]</string>
    <string name="ESA_NC_Caution">[TBD]</string>
    <string name="ESA_NC_Description">[TBD]</string>
    <string name="ESA_Test_Description">[TBD]</string>
    <string name="IASetup_FeatureTitle">360 Reality Audio Setup</string>
    <string name="Reset_Button">[TBD]</string>
    <string name="Reset_Settings_App_Note">[TBD]</string>
    <string name="Reset_Settings_Description">[TBD]</string>
    <string name="Reset_Settings_Label_App">[TBD]</string>
    <string name="Reset_Settings_Label_MDR">[TBD]</string>
    <string name="STRING_TEXT_COMMON_COLLAPSE">Collapse</string>
    <string name="STRING_TEXT_SIGNOUT">Sign out</string>
    <string name="SettingsTakeOver_Appeal_360RA_Data">Ear Analysis Results</string>
    <string name="SettingsTakeOver_Appeal_Adaptive_Data">Registered locations and setting values</string>
    <string name="SettingsTakeOver_Appeal_Description_01">The following settings can be saved to the server by linking with your account.</string>
    <string name="SettingsTakeOver_Appeal_Description_02">Settings that can be backed up vary by model.</string>
    <string name="SettingsTakeOver_Appeal_Description_03">Backed up settings can be deleted by operating the app. Also, they will automatically be deleted if Sony ends the provision of this function based on the Terms of Use.</string>
    <string name="SettingsTakeOver_Appeal_FW_Download_Title">Automatic download software settings</string>
    <string name="SettingsTakeOver_Appeal_Link">Go here for details</string>
    <string name="SettingsTakeOver_Link_Confirm_Terms_Of_Use">Check the Terms of Use</string>
    <string name="SettingsTakeOver_List_Title">Backup and restoration of settings</string>
    <string name="SettingsTakeOver_Settings_Account_Caption">Account</string>
    <string name="SettingsTakeOver_Settings_Button_Backup_Now">Back up now</string>
    <string name="SettingsTakeOver_Settings_Button_Restore_Now">Restore now</string>
    <string name="SettingsTakeOver_Settings_DeleteAccount_Caption">Delete the backup and sign out</string>
    <string name="SettingsTakeOver_Settings_DeleteAccount_Description">"Deletes settings backed up on the server.
Settings within the app will remain."</string>
    <string name="SettingsTakeOver_Settings_Description">"You can save this apps settings to the server by linking with the account you've signed in with."</string>
    <string name="SettingsTakeOver_Settings_Label_AutoSync">Automatic Synchronization</string>
    <string name="SettingsTakeOver_Settings_ServiceAccount">Account Setting</string>
    <string name="SettingsTakeOver_Settings_Status_DateTime_Label">Server Update Date:</string>
</resources>