<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ImageView android:layout_width="fill_parent" android:layout_height="wrap_content" android:src="@drawable/a_information_notification_image_settings_take_over" android:adjustViewBounds="true" />
    <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:text="@string/SettingsTakeOver_Appeal_Description_01" android:layout_marginStart="16.0dip" android:layout_marginEnd="16.0dip" style="@style/TSS_L_C2_Re" />
    <include android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="28.0dip" android:layout_marginBottom="24.0dip" android:layout_marginStart="16.0dip" android:layout_marginEnd="16.0dip" layout="@layout/sto_backup_info" />
    <View android:background="#ffcccccc" android:layout_width="fill_parent" android:layout_height="1.0dip" />
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:layout_marginStart="16.0dip" android:layout_marginEnd="16.0dip">
        <ImageView android:layout_width="24.0dip" android:layout_height="24.0dip" android:src="@drawable/a_mdr_hint_icon" />
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginStart="32.0dip">
            <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/SettingsTakeOver_Appeal_Description_02" style="@style/TSS_L_C2_MeStyle" />
            <TextView android:id="@id/compatibleDeviceListLink" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/SettingsTakeOver_Appeal_Link" style="@style/TSS_L_A1_Re" />
            <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:text="@string/SettingsTakeOver_Appeal_Description_03" style="@style/TSS_L_C2_Re" />
            <TextView android:id="@id/confirmTermsOfUseLink" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/SettingsTakeOver_Link_Confirm_Terms_Of_Use" style="@style/TSS_L_A1_Re" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>